# Hzm-AI-Bot

./: .gitignore  LICENSE  README.md  bot.py  cleaned_corpus.json  corpus_vectors.json  four_step_pipeline.py  four_step_pipeline.txt  generate_persona.py  generate_vectors.py  input_transcript.json  long_term_memory.json  memory.json  memory_manager.py  persona_analysis.md  personality_rules.json  prompt_fusion.txt  prompt_step1.txt  prompt_step2.txt  prompt_step3.txt  pyproject.toml  qa_pairs.json  run_whisper.bat  system_prompt_suggestion.md  transcribe_tencent.py  transcribe_whisper.py  人格备份.txt  灰泽满动态合集.txt
Tool/Prompt/: 基于切片内容生成的描述.txt  基于动态生成的场景性描述.txt  基于直播内容生成的描述.txt  基于直播内容的人格反写提示词.txt
persona/: persona_behaviors.json  persona_styles.json  persona_traits.json  system_prompt.txt  system_prompt_upgraded.txt
src/plugins/chatbot/: __init__.py
