[project]
name = "my_qq_bot"
version = "0.1.0"
description = "my_qq_bot"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
plugins = ["nonebot_plugin_gocqhttp"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
